# voyager-crypto-csharp

./: .gitignore  pi-dotnet.sln
ConTest/: ConTest.csproj  Program.cs
LinkerDesign.Crypto/: CMakeLists.txt  CryptoBase.cs  LICENSE  LinkerDesign.Crypto.csproj  Native.cs  README.md
LinkerDesign.Crypto/Abstraction/: AesKeySize.cs  AesMode.cs  EncodingType.cs  ExportType.cs  IBinaryDecoder.cs  IBinaryEncoder.cs  IReader.cs  MdAlgorithm.cs
LinkerDesign.Crypto/DataType/: Base64.cs  BinaryDecodeStrategy.cs  BinaryEncodeStrategy.cs  Hex.cs  Utf8.cs
LinkerDesign.Crypto/MessageDigest/: Md5.cs  Md5Sha1.cs  MdBase.cs  Sha1.cs  Sha256.cs  Sha384.cs  Sha512.cs
LinkerDesign.Crypto/Native/: CMakeLists.txt  Makefile  aes.c  aes_context.c  aes_context.h  crypto_base.c  crypto_base.h  md.c  md_context.c  md_context.h
LinkerDesign.Crypto/Reader/: Base64Reader.cs  ByteArrayReader.cs  HexReader.cs  RawReader.cs  ReaderStrategy.cs  StreamReader.cs  Utf8Reader.cs
LinkerDesign.Crypto/Store/: ByteArrayList.cs
LinkerDesign.Crypto/SymmetricEncryptDecrypt/: Aes.cs  AesBase.cs
LinkerDesign.Crypto/lib/: kcrypto.lib
